[package]

name = "spidev"
version = "0.5.0" # remember to update html_root_url
authors = ["Paul Osborne <osbpau@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/rust-embedded/rust-spidev"
homepage = "https://github.com/rust-embedded/rust-spidev"
documentation = "https://docs.rs/spidev"
description = """
Provides access to the Linux spidev interface.  This
interface allows for configuration of the spidev device,
half-duplex SPI access, and full-duplex SPI access.
"""

[dependencies]
libc = "0.2"
bitflags = "1.3"
nix = ">= 0.22, < 0.24"
